--- a/index.html
+++ b/index.html
@@ -17,13 +17,11 @@
         </div>
     </div>
     <div class="container">
-        <div class="row">
-            <div class="input-group mb-3 mt-5 w-50 mx-auto">
-                <input type="text" class="form-control" id="search-team" placeholder="Search Football Team"
-                    aria-describedby="button-addon2">
-                <button onclick="loadSports()" class="btn btn-outline-secondary" type="button" id="button-search">Search
-                    Team</button>
-            </div>
+        <div class="input-group mb-3 mt-5 mx-auto">
+            <input type="text" class="form-control" id="search-team" placeholder="Search Football Team"
+                aria-describedby="button-addon2">
+            <button onclick="loadSports()" class="btn btn-outline-secondary" type="button" id="button-search">Search
+                Team</button>
         </div>
     </div>
     <div class="container">
