ultapalta conditation check

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
             <button onclick="loadSports()" class="btn btn-outline-secondary" type="button" id="button-search">Search
                 Team</button>
         </div>
+        <div id="erorr-message">
+
+        </div>
+        <div id="not-found">
+
+        </div>
     </div>
     <div class="container">
         <div class="row mt-5 gy-3" id="sports-team">
