--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 </head>
 
-<body>
+<body class="bg-success">
     <div class="container">
         <div class="row">
-            <h2 class="text-center mt-5">Search your Favourite FootBall Team</h2>
+            <h2 class="text-center text-white mt-5">Search your Favourite FootBall Team</h2>
         </div>
     </div>
     <div class="container">
         <div class="input-group mb-3 mt-5 mx-auto">
             <input type="text" class="form-control" id="search-team" placeholder="Search Football Team"
                 aria-describedby="button-addon2">
-            <button onclick="loadSports()" class="btn btn-outline-secondary" type="button" id="button-search">Search
+            <button onclick="loadSports()" class="btn btn-info" type="button" id="button-search">Search
                 Team</button>
         </div>
         <div id="erorr-message">
